[example] updated to use components and express v3

--- a/example/views/index.jade
+++ b/example/views/index.jade
@@ -6,7 +6,7 @@ html
       input(type="file", name="img")
       input(type="submit",value="Submit")
     div#result
-    script(src='jquery.min.js')
+    script(src='jquery/jquery.js')
     script(src='framejax.js')
     script
       $('form')
